# shors_factor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
examples/: example.ipynb
nb/: Untitled.ipynb  dev.ipynb  shor_manual_qiskit.ipynb
shors_factor/: factoring.py  utils.py
shors_factor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shors_factor/shors_factor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_factoring.py
