[project]
name = "shors_factor"
version = "0.1.0"
description = "Factor an 8-bit number using Shor's algorithm with Qiskit"
authors = [{ name = "Jared Yamaoka", email = "jared.yamaoka@outlook.com" }]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["shors_factor"]

[project.dependencies]
qiskit = "^1.0.0"
